fix overlap on noweb gl banner

--- a/styles/customboot.less
+++ b/styles/customboot.less
@@ -1542,7 +1542,7 @@ img.grayscale {
 }
 
 .webGl-warning {
-  margin: 2.5rem auto 0;
+  margin: 2.5rem;
   width: 750px;
 }
 
